--- a/myCSS.css
+++ b/myCSS.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
 /* This is a comment! Text here will be ignored by the browser. */
 body {
-	margin: 0 auto;
+	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
+     	background-color: #FFFFFF;
+     	margin: 0;
+     	padding: 0;
+     	color: #000;
 }
 .homePage {
 	background: #222222;
@@ -44,4 +48,13 @@ body {
 	width: 100%;
 	height: 50px;
 	text-align: center;
+}
+a:link {
+     color: #000000;
+}
+a:visited {
+     color: #000;
+}
+a:hover, a:active, a:focus { 
+     text-decoration: underline;
 }
