--- a/myCSS.css
+++ b/myCSS.css
@@ -2,20 +2,20 @@
 /* This is a comment! Text here will be ignored by the browser. */
 body {
 	font: 100%/1.4 Verdana, Arial, Helvetica, sans-serif;
-     	background-color: #FFFFFF;
+     	background-color: #98B5B1;
      	margin: 0;
      	padding: 0;
      	color: #000;
 }
 .homePage {
-	background: #222222;
+	background: #98B5B1;
 }
 .container {
 	width: 960px;
 	margin: 0 auto;
 }
 .header {
-	background: #AAAAAA;
+	background: #637573;
 	text-align: center;
 	margin: 0px;
 	padding: 5;
@@ -25,7 +25,7 @@ body {
 	
 }
 .nav {
-	background: #BBBBBB;
+	background: #B8DBD7;
 	margin: 0px;
 	padding: 5;
 	float: left;
@@ -42,7 +42,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #777777;
+	background: #637573;
 	margin: 0px;
 	float: left;
 	width: 100%;
