--- a/myCSS.css
+++ b/myCSS.css
@@ -5,7 +5,7 @@ body {
      	background-color: #98B5B1;
      	margin: 0;
      	padding: 0;
-     	color: #838AA8;
+     	color: #F5F1A7;
 }
 .homePage {
 	background: #B3BFF5;
@@ -15,12 +15,12 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #A162A8;
+	background: #838AA8;
 	text-align: center;
 	margin: 0px;
-	padding: 0;
+	padding: 5;
 	float: left;
-	width: 150%;
+	width: 100%;
 	height: 80px;
 	
 }
@@ -34,7 +34,7 @@ body {
 	text-align: center;
 }
 .content {
-	background: #B3BFF5;
+	background: #F5F1A7;
 	margin: 0px;
 	float: left;
 	width: 100%;
@@ -42,7 +42,7 @@ body {
 	text-align: center;
 }
 .footer {
-	background: #A162A8;
+	background: #838AA8;
 	margin: 0px;
 	float: left;
 	width: 100%;
