--- a/myCSS.css
+++ b/myCSS.css
@@ -11,19 +11,18 @@ body {
 	background: #F3EDCC;
 }
 .container {
-	width: 960px;
+	width: 100%;
 	margin: 0 auto;
 }
 .header {
 	background: #838AA8;
 	text-align: center;
 	margin: 0px;
-	padding: 14px 16px;
+	padding: 0;
 	float: left;
 	width: 100%;
-	height: 80px;
+	height: 60px;
 	display: block;
-	
 	
 }
 .nav {
