--- a/myCSS.css
+++ b/myCSS.css
@@ -22,6 +22,7 @@ body {
 	float: left;
 	width: 100%;
 	height: 60px;
+	border-radius: 15px 50px;
 	
 }
 .nav {
@@ -32,6 +33,7 @@ body {
 	width: 100%;
 	height: 60px;
 	text-align: center;
+	border-radius: 15px 50px;
 }
 .content {
 	background: #F3EDCC;
