--- a/myCSS.css
+++ b/myCSS.css
@@ -18,7 +18,7 @@ body {
 	background: #838AA8;
 	text-align: center;
 	margin: 0px;
-	padding: 0;
+	padding: 150px;
 	float: left;
 	width: 100%;
 	height: 60px;
