--- a/myCSS.css
+++ b/myCSS.css
@@ -22,7 +22,7 @@ body {
 	float: left;
 	width: 50%;
 	height: 60px;
-	border-radius: 15px 50px;
+	border-radius: 30px;
 	
 }
 .nav {
@@ -33,7 +33,7 @@ body {
 	width: 50%;
 	height: 60px;
 	text-align: center;
-	border-radius: 15px 50px;
+	border-radius: 30px;
 }
 .content {
 	background: #F3EDCC;
