--- a/myCSS.css
+++ b/myCSS.css
@@ -20,9 +20,9 @@ body {
 	margin: 0px;
 	padding: 0;
 	float: left;
-	width: 50%;
+	width: 30%;
 	height: 60px;
-	border-radius: 30px;
+	border-radius: 15px 50px;
 	vertical-align: middle;
 	
 }
@@ -31,10 +31,10 @@ body {
 	margin: 0px;
 	padding: 0;
 	float: left;
-	width: 50%;
+	width: 70%;
 	height: 60px;
 	text-align: center;
-	border-radius: 30px;
+	border-radius: 15px 50px;
 }
 .content {
 	background: #F3EDCC;
