--- a/myCSS.css
+++ b/myCSS.css
@@ -6,6 +6,7 @@ body {
      	margin: 0;
      	padding: 0;
      	color: #F3EDCC;
+	text-align: center;
 }
 .homePage {
 	background: #F3EDCC;
@@ -23,7 +24,6 @@ body {
 	width: 30%;
 	height: 60px;
 	border-radius: 15px 50px;
-	vertical-align: middle;
 	
 }
 .nav {
