--- a/myCSS.css
+++ b/myCSS.css
@@ -24,7 +24,7 @@ body {
 	width: 30%;
 	height: 60px;
 	border-radius: 15px 50px;
-	vertical-align: baseline;
+	vertical-align: middle;
 	
 }
 .nav {
