--- a/myCSS.css
+++ b/myCSS.css
@@ -5,7 +5,7 @@ body {
      	background-color: #ffffff;
      	margin: 0;
      	padding: 0;
-     	color: #000000;
+     	color: #ffffff;
 	text-align: center;
 }
 .homePage {
