--- a/myCSS.css
+++ b/myCSS.css
@@ -16,7 +16,7 @@ body {
 	margin: 0 auto;
 }
 .header {
-	background: #577A73;
+	background: #FF7F7F;
 	text-align: center;
 	margin: 0px;
 	padding: 0;
