--- a/myCSS.css
+++ b/myCSS.css
@@ -44,7 +44,7 @@ body {
 	width: 100%;
 	text-align: center;
 	color: #000000;
-	color: var(--white);
+	color: var(--black);
 }
 .footer {
 	background: #9FE0D2;
