--- a/myCSS.css
+++ b/myCSS.css
@@ -44,8 +44,14 @@ body {
 	width: 100%;
 	text-align: center;
 	color: #000000;
-	color: var(--black);
+	a:link {
+     color: #black;
+		}
+	}
+a:visited {
+     color: #black;
 }
+	
 .footer {
 	background: #9FE0D2;
 	margin: 0px;
